# api-gateway

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  MIGRATION_PLAN.md  README.md  docker-compose.yml  restart.sh
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 528793bfe217_oauth_identities_and_email_verified.py  a1b2c3d4e5f6_production_hardening.py  b2c3d4e5f6a7_post_mvp_batch1.py  c3d4e5f6a7b8_api_key_encrypted.py  (+3 more)
backend/app/: config.py  database.py  deps.py  enums.py  logging_config.py  main.py  metrics.py  middleware.py  rate_limit.py  redis_client.py  security.py  seed.py  worker.py
backend/tests/: conftest.py  test_abuse_mitigation.py  test_admin_mark_verified.py  test_apimart.py  test_auth_flow.py  test_body_size_middleware.py  test_breached_password.py  test_concurrency.py  test_concurrency_service.py  test_cost.py  test_cost_service_cache.py  test_dashboard_api.py  test_dashboard_usage.py  test_deepseek_provider.py  test_error_envelope.py  test_gateway_paths.py  test_gateway_service.py  test_keys_quota.py  test_keys_reveal.py  test_log_payload_backfill.py  test_messages.py  test_oauth_linking.py  test_oauth_providers.py  test_oauth_routes.py  test_oauth_settings.py  test_oauth_state.py  test_password_policy.py  test_price_markup.py  test_price_snapshot.py  test_provider_selector.py  test_refresh_token.py  test_reservation_service.py  test_security.py  test_seed_catalog.py  test_self_service_password.py  test_settings_connections.py  test_sse.py  test_system_prompt.py  test_task_service.py  test_token_estimator.py  (+4 more)
(+170 files in other folders)
